完成了双日历

--- a/css/demo.css
+++ b/css/demo.css
@@ -278,6 +278,11 @@ body {
     float: left; }
     .calendar-wrap .calendar-box .calendar:last-child {
       float: right; }
+   .calendar-wrap  .calendar-box:after{
+      display: table;
+      content: '';
+      clear: both;
+  }
   .calendar-wrap table {
     text-align: center; }
     .calendar-wrap table th,
